# nanoservice-faker

./: Makefile  README.md  pyproject.toml  tox.ini
nanoservice_faker/: __init__.py  app.py  custom_types.py
tests/: test_nanoservice_faker.py
