[tool.poetry]
name = "nanoservice-faker"
version = "1.0.0"
description = "API and UI to generate fake data"
readme = "README.md"
homepage = "https://github.com/imankulov/nanoservice-faker"
repository = "https://github.com/imankulov/nanoservice-faker"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    ]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
faker = "^5.0.2"
uvicorn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
ipython = "^7.19.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
